# gmat_verbal

./: ai_generator.py  config.py  database.py  embeddings.py  main.py  pdf_processor.py  pyproject.toml  requirements.txt
static/css/: styles.css
static/js/: app.js
templates/: index.html
