[tool.poetry]
name = "repl-nix-gmatprepbuddy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
pypdf2 = "^3.0.1"
requests = "^2.32.3"
openai = "^1.47.0"
pdfminer-six = "^20240706"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
